[package]
name = "microfft"
version = "0.4.0"
authors = ["Jan Teske <jteske@posteo.net>"]
description = "Embedded-friendly Fast Fourier Transforms"
repository = "https://gitlab.com/ra_kete/microfft-rs"
readme = "README.md"
keywords = ["fft", "dft", "fourier"]
categories = ["algorithms", "embedded", "no-std", "science"]
license = "MIT"
edition = "2018"

# this requires Rust/Cargo 1.51 but it solves the following build problem:
# this crates uses "num-complex" with no default features, i.e. no "std" feature
# but it has "rustfft" as dev dependency which doesn't exclude the "num-complex"-
# default-features, i.e. `cargo check --target thumbv7em-none-eabihf` fails even
# tho it shouldn't - reason is that num-complex uses std - this comes from legacy
# feature resolving in cargo!
# Also see:
# - https://github.com/rust-lang/cargo/issues/9199
# - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
resolver = "2"

[dependencies]
static_assertions = "1"

[dependencies.num-complex]
version = "0.4"
default-features = false

[dev-dependencies]
rustfft = "5"

[features]
default = ["std", "maxn-4096"]
std = ["num-complex/std"]
bitrev-tables = []
maxn-4 = []
maxn-8 = []
maxn-16 = []
maxn-32 = []
maxn-64 = []
maxn-128 = []
maxn-256 = []
maxn-512 = []
maxn-1024 = []
maxn-2048 = []
maxn-4096 = []

[badges]
gitlab = { repository = "ra_kete/microfft-rs" }
