[package]
name = "microfft"
version = "0.5.0"
authors = ["Jan Teske <jteske@posteo.net>"]
description = "Embedded-friendly Fast Fourier Transforms"
repository = "https://gitlab.com/teskje/microfft-rs"
readme = "README.md"
keywords = ["fft", "dft", "fourier"]
categories = ["algorithms", "embedded", "no-std", "science"]
license = "MIT"
edition = "2021"
rust-version = "1.56"

[dependencies]
cfg-if = "1"
static_assertions = "1"

[dependencies.num-complex]
version = "0.4"
default-features = false

[dev-dependencies]
rustfft = "6"

# workaround for enabling all features for `cargo test`
# see https://github.com/rust-lang/cargo/issues/2911
[dev-dependencies.microfft]
path = "."
features = ["std", "size-16384"]

[features]
default = ["size-4096"]
std = ["num-complex/std"]
bitrev-tables = []
size-4 = []
size-8 = ["size-4"]
size-16 = ["size-8"]
size-32 = ["size-16"]
size-64 = ["size-32"]
size-128 = ["size-64"]
size-256 = ["size-128"]
size-512 = ["size-256"]
size-1024 = ["size-512"]
size-2048 = ["size-1024"]
size-4096 = ["size-2048"]
size-8192 = ["size-4096"]
size-16384 = ["size-8192"]

[badges]
gitlab = { repository = "teskje/microfft-rs" }
